# gizmo

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: deploy.yml
bots/claude-knowledge/: .gitignore  Dockerfile  README.md  concurrent-wait.sh  coordinator.ts  entrypoint.sh  prompt-router.md  prompt-worker.md  prompt.md  run.sh
bun/: README.md  cli.ts  client.test.ts  client.ts  crypto.ts  index.ts  package.json
src/: db.rs  deploy.rs  main.rs  models.rs  server.rs  ws.rs
web/: chat.html  home.html  index.html  manifest.json
