[package]
name = "gizmo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "6"
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
futures-util = "0.3.32"
hex = "0.4.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4"] }
